Fixed some extra spaces

--- a/app/ggmate/static/css/company.css
+++ b/app/ggmate/static/css/company.css
@@ -149,7 +149,7 @@ i {
   thead {
     display: none;
   }
-  tr td {
+  .tds {
     display: block;
     text-align: center;
   }
